--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,13 +12,18 @@ margin:0 auto;
 
 }
 
-.container button{
+/* .container button{
   padding: 12px 24px;
   background: lightblue;
   border:none;
   border-radius: 24px;
   font-weight:bold;
   font-size: 24px;
+} */
+
+.container input{
+  height: 200px;
+  width: 200px;
 }
 
 .scoring{
@@ -36,4 +41,10 @@ margin:0 auto;
   height:10px;
   width: 20px;
   padding: 10px 20px;
+}
+
+#reset-button{
+  font-size: 50px;
+  display:flex;
+  margin: 0 auto;
 }
